# pythondesec

./: LICENSE  README.md  pyproject.toml
pythondesec/: desec.py
