[tool.poetry]
name = "pythondesec"
version = "0.1.0"
description = "A Python wrapper around the deSEC.io API."
authors = ["Rosie Sweet <rose@rjasweet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"
black = "^21.5b2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
